--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="description" content="Jeremy Jude Lee is a lifestyle and commercial photographer and videographer based out of Vancouver, Canada.">
+    <meta name="description" content="Jeremy Jude Lee is a lifestyle and commercial photographer and videographer based out of Vancouver, Canada. He’s also a very nice guy.">
     <meta name="keywords" content="Jeremy Jude Lee, lifestyle photographer, vancouver, bc, canada">
     <meta name="author" content="Jeremy Jude Lee">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
