updates to title, journal length, journal hover

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jeremy Jude Lee : Lifestyle and Commercial Photographer</title>
+    <title>Jeremy Jude Lee : Photographer</title>
     <!-- Railtown -->
     <script src='https://railtownazureb2c.blob.core.windows.net/cdn/railtown.min.js'></script>
     <script>
