website updates, about page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="description" content="Jeremy Jude Lee is a lifestyle and commercial photographer and videographer based out of Vancouver, Canada. He’s also a very nice guy.">
+    <meta name="description" content="Jeremy Jude Lee is a Chinese-Canadian artist & photographer known for nostalgic storytelling. Currently between Vancouver, Los Angeles + New York.">
     <meta name="keywords" content="Jeremy Jude Lee, lifestyle photographer, vancouver, bc, canada">
     <meta name="author" content="Jeremy Jude Lee">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jeremy Jude Lee : Photographer</title>
+    <title>Jeremy Jude Lee (JJL) | Photography</title>
     <!-- Railtown -->
     <script src='https://railtownazureb2c.blob.core.windows.net/cdn/railtown.min.js'></script>
     <script>
